--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "pybind11"]
 	path = pybind11
 	url = git@github.com:pybind/pybind11.git
+[submodule "tbb"]
+	path = tbb
+	url = https://github.com/wjakob/tbb.git
