--- a/01_py-list_cpp-vector/CMakeLists.txt
+++ b/01_py-list_cpp-vector/CMakeLists.txt
@@ -1,16 +1,23 @@
-cmake_minimum_required(VERSION 2.8.12)
+cmake_minimum_required(VERSION 3.0)
 project(example)
 
 add_subdirectory(pybind11)
-pybind11_add_module(example example.cpp)
-
-IF(APPLE)
-    set_target_properties(processGraph PROPERTIES PREFIX ".dylib" )
-ENDIF()
+add_subdirectory(tbb)
+#pybind11_add_module(example example.cpp)
+#include_directories("${CMAKE_SOURCE_DIR}/tbb/include")
+#include_directories("${CMAKE_SOURCE_DIR}/pybind11/")
+# IF(APPLE)
+#     set_target_properties(processGraph PROPERTIES PREFIX ".dylib" )
+# ENDIF()
 
 IF (MSVC)
-    pybind11_add_module(example SHARED
-		example.cpp
+	find_package(TBB COMPONENTS tbbmalloc tbbmalloc_proxy)
+	find_package(PythonLibs)
+	file(GLOB_RECURSE _HDRS "${CMAKE_SOURCE_DIR}/tbb/include")
+  pybind11_add_module(example SHARED
+	${_HDRS}
+	${TBB_LIBRARIES}
+	example.cpp
 	)
 ELSE()
   find_package(TBB COMPONENTS tbbmalloc tbbmalloc_proxy)
@@ -18,11 +25,11 @@ ELSE()
 	file(GLOB_RECURSE _HDRS "${CMAKE_SOURCE_DIR}/tbb/include")
 
 
-    #pybind11_add_module(example SHARED
-		#${_HDRS}
-		#${TBB_LIBRARIES}
-		# example.cpp
-	  # )
+    pybind11_add_module(example SHARED
+		${_HDRS}
+		${TBB_LIBRARIES}
+		example.cpp
+	  )
 
 ENDIF()
 
