--- a/01_py-list_cpp-vector/CMakeLists.txt
+++ b/01_py-list_cpp-vector/CMakeLists.txt
@@ -1,5 +1,12 @@
 cmake_minimum_required(VERSION 3.0)
 project(example)
+if(MSVC)
+	set(PYBIND11_CPP_STANDARD /std:c++17)
+else()
+  	set(PYBIND11_CPP_STANDARD -std=c++1z)
+endif()
+
+set(CMAKE_BUILD_TYPE "RELEASE")
 find_package(PythonLibs)
 include_directories(${PYTHON_INCLUDE_DIR})
 add_subdirectory(pybind11)
@@ -7,6 +14,7 @@ add_subdirectory(tbb)
 #pybind11_add_module(example example.cpp)
 #include_directories("${CMAKE_SOURCE_DIR}/tbb/include")
 #include_directories("${CMAKE_SOURCE_DIR}/pybind11/")
+
 # IF(APPLE)
 #     set_target_properties(processGraph PROPERTIES PREFIX ".dylib" )
 # ENDIF()
