--- a/01_py-list_cpp-vector/CMakeLists.txt
+++ b/01_py-list_cpp-vector/CMakeLists.txt
@@ -3,7 +3,9 @@ project(example)
 if(MSVC)
 	set(PYBIND11_CPP_STANDARD /std:c++17)
 else()
-  	set(PYBIND11_CPP_STANDARD -std=c++1z)
+		set(PYBIND11_CPP_STANDARD -std=c++1z)
+		#add -ltbb to compile/link command line
+		#set (CMAKE_CXX_FLAGS "-ltbb")
 endif()
 if(APPLE)
 	set(PYTHON_INCLUDE_DIR "/anaconda3/include/python3.6m")
