fixed tbb problems

--- a/01_py-list_cpp-vector/CMakeLists.txt
+++ b/01_py-list_cpp-vector/CMakeLists.txt
@@ -41,10 +41,12 @@ ELSE()
 	file(GLOB_RECURSE _HDRS "${CMAKE_SOURCE_DIR}/tbb/include")
 
 
-    pybind11_add_module(example ${_HDRS}	${TBB_LIBRARIES} example.cpp )
+    pybind11_add_module(example ${_HDRS} example.cpp )
 
 ENDIF()
-
+target_include_directories(example PRIVATE ${TBB_INCLUDE_DIRS})
+target_compile_definitions(example PRIVATE ${TBB_DEFINITIONS})
+target_link_libraries(example ${TBB_LIBRARIES})
 #### Additional pybind11 stuff!
  
 #post build command 
