--- a/01_py-list_cpp-vector/CMakeLists.txt
+++ b/01_py-list_cpp-vector/CMakeLists.txt
@@ -21,9 +21,9 @@ include_directories(${PYTHON_INCLUDE_DIR})
 add_subdirectory(pybind11)
 add_subdirectory(tbb)
 set(TBB_ROOT_DIR    "${CMAKE_SOURCE_DIR}tbb")
-    set(TBB_INCLUDE_DIR    "${CMAKE_SOURCE_DIR}tbb/include")
-    set(TBB_INCLUDE_DIRS    "/${CMAKE_SOURCE_DIR}tbb/include")
-    set(TBB_LIBRARY    "${CMAKE_SOURCE_DIR}tbb/libtbb.dll")
+    set(TBB_INCLUDE_DIR    "${CMAKE_SOURCE_DIR}/tbb/include")
+    set(TBB_INCLUDE_DIRS    "/${CMAKE_SOURCE_DIR}/tbb/include")
+    set(TBB_LIBRARY    "${CMAKE_SOURCE_DIR}/tbb/Release/libtbb.lib")
 	find_package(TBB COMPONENTS tbbmalloc )
 include_directories("${CMAKE_SOURCE_DIR}/tbb/include")
 include_directories("${CMAKE_SOURCE_DIR}/pybind11/")
