--- a/01_py-list_cpp-vector/CMakeLists.txt
+++ b/01_py-list_cpp-vector/CMakeLists.txt
@@ -22,13 +22,19 @@ include_directories(${PYTHON_INCLUDE_DIR})
 set(TBB_ROOT_DIR    "${CMAKE_SOURCE_DIR}/tbb")
 set(TBB_INCLUDE_DIR    "${CMAKE_SOURCE_DIR}/tbb/include")
 set(TBB_INCLUDE_DIRS    "/${CMAKE_SOURCE_DIR}/tbb/include")
+if(MSVC)
 set(TBB_LIBRARY    "${CMAKE_SOURCE_DIR}/tbb/Release/libtbb.dll")
 list(APPEND TBB_LIBRARIES  "${CMAKE_SOURCE_DIR}/tbb/Release/libtbb.dll")
 list(APPEND TBB_LIBRARIES  "${CMAKE_SOURCE_DIR}/tbb/Release/libtbbmalloc.dll")
 list(APPEND TBB_LIBRARIES  "${CMAKE_SOURCE_DIR}/tbb/Release/libtbbmalloc_proxy.dll")
-
+elseif(APPLE)
+	set(TBB_LIBRARY    "${CMAKE_SOURCE_DIR}/tbb/Release/libtbb.dylib")
+	list(APPEND TBB_LIBRARIES  "${CMAKE_SOURCE_DIR}/tbb/Release/libtbb.dylib")
+	list(APPEND TBB_LIBRARIES  "${CMAKE_SOURCE_DIR}/tbb/Release/libtbbmalloc.dylib")
+	list(APPEND TBB_LIBRARIES  "${CMAKE_SOURCE_DIR}/tbb/Release/libtbbmalloc_proxy.dylib")
+endif()
 add_subdirectory(pybind11)
-#add_subdirectory(tbb)
+add_subdirectory(tbb)
 
 find_package(TBB COMPONENTS tbbmalloc )
 include_directories("${CMAKE_SOURCE_DIR}/tbb/include")
