--- a/01_py-list_cpp-vector/CMakeLists.txt
+++ b/01_py-list_cpp-vector/CMakeLists.txt
@@ -24,12 +24,14 @@ set(TBB_INCLUDE_DIR    "${CMAKE_SOURCE_DIR}/tbb/include")
 set(TBB_INCLUDE_DIRS    "/${CMAKE_SOURCE_DIR}/tbb/include")
 if(MSVC)
 	set(TBB_LIBRARY    "${CMAKE_SOURCE_DIR}/tbb/Release/libtbb.dll")
+	set(TBB_PROXY_LIBRARY "${CMAKE_SOURCE_DIR}/tbb/Release/libtbbmalloc_proxy.dll")
 	list(APPEND TBB_LIBRARIES  "${CMAKE_SOURCE_DIR}/tbb/Release/libtbb.dll")
 	list(APPEND TBB_LIBRARIES  "${CMAKE_SOURCE_DIR}/tbb/Release/libtbbmalloc.dll")
 	list(APPEND TBB_LIBRARIES  "${CMAKE_SOURCE_DIR}/tbb/Release/libtbbmalloc_proxy.dll")
 
 elseif(APPLE)
 	set(TBB_LIBRARY    "${CMAKE_SOURCE_DIR}/tbb/Release/libtbb.dylib")
+	set(TBB_PROXY_LIBRARY "${CMAKE_SOURCE_DIR}/tbb/Release/libtbbmalloc_proxy.dylib")
 	list(APPEND TBB_LIBRARIES  "${CMAKE_SOURCE_DIR}/tbb/Release/libtbb.dylib")
 	list(APPEND TBB_LIBRARIES  "${CMAKE_SOURCE_DIR}/tbb/Release/libtbbmalloc.dylib")
 	list(APPEND TBB_LIBRARIES  "${CMAKE_SOURCE_DIR}/tbb/Release/libtbbmalloc_proxy.dylib")
