--- a/01_py-list_cpp-vector/CMakeLists.txt
+++ b/01_py-list_cpp-vector/CMakeLists.txt
@@ -30,11 +30,11 @@ if(MSVC)
 	list(APPEND TBB_LIBRARIES  "${CMAKE_SOURCE_DIR}/tbb/Release/libtbbmalloc_proxy.dll")
 
 elseif(APPLE)
-	set(TBB_LIBRARY    "${CMAKE_SOURCE_DIR}/tbb/Release/libtbb.dylib")
-	set(TBB_PROXY_LIBRARY "${CMAKE_SOURCE_DIR}/tbb/Release/libtbbmalloc_proxy.dylib")
-	list(APPEND TBB_LIBRARIES  "${CMAKE_SOURCE_DIR}/tbb/Release/libtbb.dylib")
-	list(APPEND TBB_LIBRARIES  "${CMAKE_SOURCE_DIR}/tbb/Release/libtbbmalloc.dylib")
-	list(APPEND TBB_LIBRARIES  "${CMAKE_SOURCE_DIR}/tbb/Release/libtbbmalloc_proxy.dylib")
+	set(TBB_LIBRARY    "${CMAKE_SOURCE_DIR}/tbb/Release/libtbb_static.a")
+	set(TBB_PROXY_LIBRARY "${CMAKE_SOURCE_DIR}/tbb/Release/libtbbmalloc_proxy_static.a")
+	list(APPEND TBB_LIBRARIES  "${CMAKE_SOURCE_DIR}/tbb/Release/libtbb_static.a")
+	list(APPEND TBB_LIBRARIES  "${CMAKE_SOURCE_DIR}/tbb/Release/libtbbmalloc_static.a")
+	list(APPEND TBB_LIBRARIES  "${CMAKE_SOURCE_DIR}/tbb/Release/libtbbmalloc_proxy_static.a")
 	
 endif()
 link_directories("${TBB_ROOT_DIR}/Release")
