--- a/01_py-list_cpp-vector/CMakeLists.txt
+++ b/01_py-list_cpp-vector/CMakeLists.txt
@@ -23,11 +23,11 @@ set(TBB_ROOT_DIR    "${CMAKE_SOURCE_DIR}/tbb")
 set(TBB_INCLUDE_DIR    "${CMAKE_SOURCE_DIR}/tbb/include")
 set(TBB_INCLUDE_DIRS    "/${CMAKE_SOURCE_DIR}/tbb/include")
 if(MSVC)
-	set(TBB_LIBRARY    "${CMAKE_SOURCE_DIR}/tbb/Release/libtbb_static.lib")
-	set(TBB_PROXY_LIBRARY "${CMAKE_SOURCE_DIR}/tbb/Release/libtbbmalloc_proxy_static.lib")
-	list(APPEND TBB_LIBRARIES  "${CMAKE_SOURCE_DIR}/tbb/Release/libtbb_static.lib")
-	list(APPEND TBB_LIBRARIES  "${CMAKE_SOURCE_DIR}/tbb/Release/libtbbmalloc_static.lib")
-	list(APPEND TBB_LIBRARIES  "${CMAKE_SOURCE_DIR}/tbb/Release/libtbbmalloc_proxy_static.lib")
+	set(TBB_LIBRARY    "${CMAKE_SOURCE_DIR}/tbb/Release/tbb_static.lib")
+	set(TBB_PROXY_LIBRARY "${CMAKE_SOURCE_DIR}/tbb/Release/tbbmalloc_proxy_static.lib")
+	list(APPEND TBB_LIBRARIES  "${CMAKE_SOURCE_DIR}/tbb/Release/tbb_static.lib")
+	list(APPEND TBB_LIBRARIES  "${CMAKE_SOURCE_DIR}/tbb/Release/tbbmalloc_static.lib")
+	list(APPEND TBB_LIBRARIES  "${CMAKE_SOURCE_DIR}/tbb/Release/tbbmalloc_proxy_static.lib")
 
 elseif(APPLE)
 	set(TBB_LIBRARY    "${CMAKE_SOURCE_DIR}/tbb/Release/libtbb_static.a")
